src/ui/snapshots/kvn__ui__widgets__tests__status_bar_connect_pending_snapshot.snap
---
source: src/ui/widgets.rs
expression: status_bar_styles(&model)
---
 CONNECTING                                                                                           DoH  Global
[113x1]
--- styles ---
aaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbcccbbcccccc
a fg=Black bg=Yellow BOLD
b fg=Gray bg=Rgb(14, 14, 14)
c fg=Cyan bg=Rgb(14, 14, 14) BOLD
