src/ui/snapshots/kvn__ui__widgets__tests__status_bar_connecting_snapshot.snap
---
source: src/ui/widgets.rs
expression: buffer_to_string(&buf)
---
 CONNECTING                                                                                           DoH  Global
[113x1]
